# Memora-backend

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  alembic.ini  check_db.py  check_memori.py  check_memori2.py  check_memori3.py  memori_api.txt  pyproject.toml  rebuild_fts.py  render.yaml  test_agent.py  test_apis.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_push_subscription_id.py  003_telegram_chat_id.py
api/: index.py
app/: __init__.py  config.py  database.py  main.py
app/ai/: client.py  entity_resolver.py  intent_engine.py  nudge_engine.py  summary_generator.py  time_parser.py  validators.py  weekly_planner.py
app/models/: __init__.py  backup.py  domain.py  event.py  project.py  reminder.py  settings.py  task.py
app/routers/: backup.py  calendar.py  chat.py  dashboard.py  domains.py  memory.py  notifications.py  projects.py  reminders.py  search.py  settings.py  tasks.py
app/schemas/: __init__.py  calendar.py  chat.py  common.py  domain.py  memory.py  project.py  reminder.py  settings.py  task.py
app/services/: backup_service.py  calendar_service.py  chat_service.py  conflict_engine.py  dashboard_service.py  domain_service.py  memory_service.py  notification_client.py  project_service.py  recurrence_service.py  reminder_service.py  search_service.py  settings_service.py  task_service.py
app/utils/: datetime_helpers.py  logger.py
scripts/: seed.py
tests/: conftest.py
tests/fixtures/: sample_conversations.json  sample_tasks.json
tests/unit/: test_conflict_engine.py  (+4 more)
(+8 files in other folders)
